# CustomInventory

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/custominventory/: manage.py
backend/custominventory/apps/inventory/: apps.py  models.py  urls.py  views.py
backend/custominventory/apps/inventory/static/inventory/js/: app.js  modals.js
backend/custominventory/apps/inventory/templates/inventory/: index.html  inventory-home.html
backend/custominventory/apps/inventory/templates/inventory/includes/: modal-base.html
backend/custominventory/apps/inventory/templates/inventory/includes/category/: add-category-modal.html
backend/custominventory/apps/inventory/templates/inventory/includes/operations/: add-operation-modal.html
backend/custominventory/apps/inventory/templates/inventory/includes/products/: edit-product-modal.html  find-product-modal.html
backend/custominventory/custominventory/: settings.py  urls.py
backend/custominventory/templates/: base.html
custominventory/: requirements.txt
custominventory/apps/inventory/: admin.py  models.py  urls.py  views.py
custominventory/custominventory/: asgi.py  settings.py  urls.py  wsgi.py
custominventory/static/js/: vue-module.js  vue.js
custominventory/templates/: base.html
custominventory/templates/includes/: navbar.html
frontend/: README.md  package.json
frontend/src/: App.vue  main.js  main.ts  supabaseClient.ts
frontend/src/router/: index.js  index.ts
frontend/src/views/: AboutView.vue  ProductView.vue
(+19 files in other folders)
